# fake-strain2

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/calc/: CMakeLists.txt  StrainRuntimeData.h  calculate.cpp  calculate.h  embot_dsp.h  enum.h  firmware.cpp  firmware.h  strainConfigData.h  strainRuntimeData.h
src/unittest/: CMakeLists.txt  gtest_main.cc  test1.cpp
